@@ -3,18 +3,20 @@ package com.mrcrayfish.framework.platform.network;
 import com.mrcrayfish.framework.api.network.FrameworkNetwork;
 import com.mrcrayfish.framework.api.network.FrameworkNetworkBuilder;
 import com.mrcrayfish.framework.api.network.MessageDirection;
-import com.mrcrayfish.framework.api.network.message.HandshakeMessage;
+import com.mrcrayfish.framework.api.network.message.ConfigurationMessage;
 import com.mrcrayfish.framework.api.network.message.PlayMessage;
 import net.minecraft.resources.ResourceLocation;
-import org.apache.commons.lang3.tuple.Pair;
-import org.jetbrains.annotations.Nullable;
+import net.minecraft.server.network.ConfigurationTask;
+import net.minecraft.server.network.ServerConfigurationPacketListenerImpl;
 
+import javax.annotation.Nullable;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.function.Function;
+import java.util.function.BiFunction;
+import java.util.function.Supplier;
 
 /**
  * Author: MrCrayfish
@@ -25,7 +27,7 @@ public class FabricNetworkBuilder implements FrameworkNetworkBuilder
     private final int version;
     private final AtomicInteger idCount = new AtomicInteger(1);
     private final List<FabricMessage<?>> playMessages = new ArrayList<>();
-    private final List<FabricHandshakeMessage<?>> handshakeMessages = new ArrayList<>();
+    private final List<BiFunction<FabricNetwork, ServerConfigurationPacketListenerImpl, ConfigurationTask>> configurationTasks = new ArrayList<>();
 
     public FabricNetworkBuilder(ResourceLocation id, int version)
     {
@@ -64,27 +66,22 @@ public class FabricNetworkBuilder implements FrameworkNetworkBuilder
     }
 
     @Override
-    public <T extends HandshakeMessage<T>> FrameworkNetworkBuilder registerHandshakeMessage(Class<T> messageClass, boolean sendOnHandshake)
-    {
-        return this.registerHandshakeMessage(messageClass, sendOnHandshake ? FrameworkNetworkBuilder.createHandshakeMessageSupplier(messageClass) : null);
-    }
-
-    @Override
-    public <T extends HandshakeMessage<T>> FrameworkNetworkBuilder registerHandshakeMessage(Class<T> messageClass, @Nullable Function<Boolean, List<Pair<String, T>>> messages)
+    public <T extends ConfigurationMessage<T>> FrameworkNetworkBuilder registerConfigurationMessage(Class<T> taskClass, String name, Supplier<List<T>> messages)
     {
         try
         {
-            Constructor<T> constructor = messageClass.getDeclaredConstructor();
-            T message = constructor.newInstance();
-            this.handshakeMessages.add(new FabricHandshakeMessage<>(this.idCount.getAndIncrement(), messageClass, message::encode, message::decode, message::handle, null, messages));
+            ConfigurationTask.Type type = new ConfigurationTask.Type(this.id.withPath(name).toString());
+            T message = taskClass.getDeclaredConstructor().newInstance();
+            this.playMessages.add(new FabricMessage<>(this.idCount.getAndIncrement(), taskClass, message::encode, message::decode, message::handle, MessageDirection.PLAY_CLIENT_BOUND));
+            this.configurationTasks.add((network, handler) -> new FabricConfigurationTask<>(network, handler, type, messages));
         }
         catch(NoSuchMethodException e)
         {
-            throw new IllegalArgumentException(String.format("The message %s is missing an empty parameter constructor", messageClass.getName()), e);
+            throw new IllegalArgumentException(String.format("The message %s is missing an empty parameter constructor", taskClass.getName()), e);
         }
         catch(IllegalAccessException e)
         {
-            throw new IllegalArgumentException(String.format("Unable to access the constructor of %s. Make sure the constructor is public.", messageClass.getName()), e);
+            throw new IllegalArgumentException(String.format("Unable to access the constructor of %s. Make sure the constructor is public.", taskClass.getName()), e);
         }
         catch(InvocationTargetException | InstantiationException e)
         {
@@ -108,8 +105,10 @@ public class FabricNetworkBuilder implements FrameworkNetworkBuilder
     @Override
     public FrameworkNetwork build()
     {
-        // Auto register default acknowledge message if network has handshake messages
-        if(this.handshakeMessages.size() > 0) this.registerHandshakeMessage(HandshakeMessage.Acknowledge.class, false);
-        return new FabricNetwork(this.id, this.version, this.playMessages, this.handshakeMessages);
+        if(!this.configurationTasks.isEmpty())
+        {
+            this.registerPlayMessage(ConfigurationMessage.Acknowledge.class, MessageDirection.PLAY_SERVER_BOUND);
+        }
+        return new FabricNetwork(this.id, this.version, this.playMessages, this.configurationTasks);
     }
 }
