@@ -5,28 +5,24 @@ import com.mrcrayfish.framework.api.network.FrameworkNetwork;
 import com.mrcrayfish.framework.api.network.FrameworkNetworkBuilder;
 import com.mrcrayfish.framework.api.network.MessageContext;
 import com.mrcrayfish.framework.api.network.MessageDirection;
-import com.mrcrayfish.framework.api.network.message.HandshakeMessage;
+import com.mrcrayfish.framework.api.network.message.ConfigurationMessage;
 import com.mrcrayfish.framework.api.network.message.PlayMessage;
 import com.mrcrayfish.framework.network.message.IMessage;
-import com.mrcrayfish.framework.network.message.LoginIndexHolder;
 import net.minecraft.Util;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraftforge.network.HandshakeHandler;
+import net.minecraft.server.network.ConfigurationTask;
+import net.minecraftforge.network.ChannelBuilder;
 import net.minecraftforge.network.NetworkDirection;
-import net.minecraftforge.network.NetworkRegistry;
-import net.minecraftforge.network.simple.SimpleChannel;
-import org.apache.commons.lang3.tuple.Pair;
+import net.minecraftforge.network.SimpleChannel;
 
 import javax.annotation.Nullable;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Function;
+import java.util.function.Supplier;
 
 /**
  * Author: MrCrayfish
@@ -44,9 +40,9 @@ public class ForgeNetworkBuilder implements FrameworkNetworkBuilder
     private final int version;
     private boolean requiresClient = true;
     private boolean requiresServer = true;
-    private final AtomicInteger idCount = new AtomicInteger(1);
     private final List<Consumer<SimpleChannel>> playMessages = new ArrayList<>();
-    private final List<Consumer<SimpleChannel>> handshakeMessages = new ArrayList<>();
+    private final List<Consumer<SimpleChannel>> configurationMessages = new ArrayList<>();
+    private final List<Function<SimpleChannel, ConfigurationTask>> configurationTasks = new ArrayList<>();
 
     public ForgeNetworkBuilder(ResourceLocation id, int version)
     {
@@ -78,16 +74,20 @@ public class ForgeNetworkBuilder implements FrameworkNetworkBuilder
     {
         try
         {
-            Constructor<T> constructor = messageClass.getDeclaredConstructor();
-            T message = constructor.newInstance();
+            T message = messageClass.getDeclaredConstructor().newInstance();
             NetworkDirection networkDirection = DIRECTION_MAPPER.get(direction);
-            this.playMessages.add(channel -> channel.registerMessage(this.idCount.getAndIncrement(), messageClass, message::encode, message::decode, (msg, context) -> {
-                MessageDirection dir = DIRECTION_MAPPER.inverse().get(context.get().getDirection());
-                MessageContext messageContext = new ForgeMessageContext(context.get(), dir);
-                message.handle(msg, messageContext);
-                IMessage<?> reply = messageContext.getReply();
-                if(reply != null) channel.reply(reply, context.get());
-            }, Optional.ofNullable(networkDirection)));
+            this.playMessages.add(channel -> channel.messageBuilder(messageClass, networkDirection)
+                .encoder(message::encode)
+                .decoder(message::decode)
+                .consumerNetworkThread((msg, context) -> {
+                    MessageDirection dir = DIRECTION_MAPPER.inverse().get(context.getDirection());
+                    MessageContext messageContext = new ForgeMessageContext(context, dir);
+                    message.handle(msg, messageContext);
+                    IMessage<?> reply = messageContext.getReply();
+                    if(reply != null) {
+                        channel.reply(reply, context);
+                    }
+                }).add());
         }
         catch(NoSuchMethodException e)
         {
@@ -105,48 +105,34 @@ public class ForgeNetworkBuilder implements FrameworkNetworkBuilder
     }
 
     @Override
-    public <T extends HandshakeMessage<T>> ForgeNetworkBuilder registerHandshakeMessage(Class<T> messageClass, boolean sendOnHandshake)
-    {
-        return registerHandshakeMessage(messageClass, sendOnHandshake ? FrameworkNetworkBuilder.createHandshakeMessageSupplier(messageClass) : null);
-    }
-
-    @Override
-    public <T extends HandshakeMessage<T>> ForgeNetworkBuilder registerHandshakeMessage(Class<T> messageClass, @Nullable Function<Boolean, List<Pair<String, T>>> messages)
+    public <T extends ConfigurationMessage<T>> FrameworkNetworkBuilder registerConfigurationMessage(Class<T> configurationClass, String name, Supplier<List<T>> messages)
     {
         try
         {
-            Constructor<T> constructor = messageClass.getDeclaredConstructor();
-            T message = constructor.newInstance();
-            this.handshakeMessages.add(channel ->
-            {
-                SimpleChannel.MessageBuilder<T> builder = channel.messageBuilder(messageClass, this.idCount.getAndIncrement());
-                builder.loginIndex(LoginIndexHolder::getLoginIndex, LoginIndexHolder::setLoginIndex);
-                builder.encoder(message::encode);
-                builder.decoder(message::decode);
-                builder.consumerNetworkThread((msg, context) -> {
-                    MessageDirection direction = DIRECTION_MAPPER.inverse().get(context.get().getDirection());
-                    MessageContext messageContext = new ForgeMessageContext(context.get(), direction);
-                    msg.handle(msg, messageContext);
+            ConfigurationTask.Type type = new ConfigurationTask.Type(this.id.withPath(name).toString());
+            this.configurationTasks.add(channel -> new ForgeConfigurationTask<>(channel, type, messages));
+            T message = configurationClass.getDeclaredConstructor().newInstance();
+            NetworkDirection networkDirection = DIRECTION_MAPPER.get(MessageDirection.PLAY_CLIENT_BOUND);
+            this.configurationMessages.add(channel -> channel.messageBuilder(configurationClass, networkDirection)
+                .encoder(message::encode)
+                .decoder(message::decode)
+                .consumerNetworkThread((msg, context) -> {
+                    MessageDirection dir = DIRECTION_MAPPER.inverse().get(context.getDirection());
+                    MessageContext messageContext = new ForgeMessageContext(context, dir);
+                    message.handle(msg, messageContext);
                     IMessage<?> reply = messageContext.getReply();
-                    if(context.get().getDirection() == NetworkDirection.LOGIN_TO_CLIENT) {
-                        Objects.requireNonNull(reply, "Handshake messages received on the client must reply with an acknowledgement/message");
-                        channel.reply(reply, context.get());
+                    if(reply != null) {
+                        channel.reply(reply, context);
                     }
-                });
-                if(messages != null)
-                {
-                    builder.buildLoginPacketList(messages);
-                }
-                builder.add();
-            });
+                }).add());
         }
         catch(NoSuchMethodException e)
         {
-            throw new IllegalArgumentException(String.format("The message %s is missing an empty parameter constructor", messageClass.getName()), e);
+            throw new IllegalArgumentException(String.format("The message %s is missing an empty parameter constructor", configurationClass.getName()), e);
         }
         catch(IllegalAccessException e)
         {
-            throw new IllegalArgumentException(String.format("Unable to access the constructor of %s. Make sure the constructor is public.", messageClass.getName()), e);
+            throw new IllegalArgumentException(String.format("Unable to access the constructor of %s. Make sure the constructor is public.", configurationClass.getName()), e);
         }
         catch(InvocationTargetException | InstantiationException e)
         {
@@ -155,37 +141,30 @@ public class ForgeNetworkBuilder implements FrameworkNetworkBuilder
         return this;
     }
 
-    private void registerAckMessage(SimpleChannel channel)
+    private void registerConfigurationAckMessage(SimpleChannel channel)
     {
-        HandshakeMessage.Acknowledge acknowledge = new HandshakeMessage.Acknowledge();
-        channel.messageBuilder(HandshakeMessage.Acknowledge.class, this.idCount.getAndIncrement())
-                .loginIndex(HandshakeMessage::getLoginIndex, HandshakeMessage::setLoginIndex)
-                .decoder(acknowledge::decode)
-                .encoder(acknowledge::encode)
-                .consumerNetworkThread((acknowledge1, context) -> {
-                    HandshakeHandler.indexFirst((handler, msg, s) -> {
-                        MessageDirection direction = DIRECTION_MAPPER.inverse().get(s.get().getDirection());
-                        acknowledge.handle(acknowledge1, new ForgeMessageContext(s.get(), direction));
-                    }).accept(acknowledge1, context);
-                })
-                .add();
+        ConfigurationMessage.Acknowledge acknowledge = new ConfigurationMessage.Acknowledge();
+        channel.messageBuilder(ConfigurationMessage.Acknowledge.class, NetworkDirection.PLAY_TO_SERVER)
+            .decoder(acknowledge::decode)
+            .encoder(acknowledge::encode)
+            .consumerNetworkThread((acknowledge1, context) -> {
+                MessageDirection direction = DIRECTION_MAPPER.inverse().get(context.getDirection());
+                acknowledge.handle(acknowledge1, new ForgeMessageContext(context, direction));
+            }).add();
     }
 
     public FrameworkNetwork build()
     {
-        this.idCount.set(1);
-        final boolean ignoreClient = !this.requiresClient;
-        final boolean ignoreServer = !this.requiresServer;
-        String protocolVersion = Integer.toString(this.version);
-        SimpleChannel channel = NetworkRegistry.ChannelBuilder
-                .named(this.id)
-                .networkProtocolVersion(() -> protocolVersion)
-                .clientAcceptedVersions(s -> ignoreServer || protocolVersion.equals(s))
-                .serverAcceptedVersions(s -> ignoreClient || protocolVersion.equals(s))
-                .simpleChannel();
-        this.playMessages.forEach(consumer -> consumer.accept(channel));
-        if(this.handshakeMessages.size() > 0) this.registerAckMessage(channel);
-        this.handshakeMessages.forEach(consumer -> consumer.accept(channel));
-        return new ForgeNetwork(channel);
+        ChannelBuilder builder = ChannelBuilder.named(this.id).networkProtocolVersion(this.version);
+        if(!this.requiresClient) builder.optionalClient();
+        if(!this.requiresServer) builder.optionalServer();
+        SimpleChannel channel = builder.simpleChannel();
+        this.playMessages.forEach(c -> c.accept(channel));
+        if(!this.configurationMessages.isEmpty())
+        {
+            this.registerConfigurationAckMessage(channel);
+            this.configurationMessages.forEach(c -> c.accept(channel));
+        }
+        return new ForgeNetwork(channel, this.configurationTasks);
     }
 }
